--- a/index.html
+++ b/index.html
@@ -11,11 +11,52 @@
             <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
             <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
             <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+            <hr>
         </div>
     </header>
 
     <main>
-
+        <div>
+            <h2>Le mie spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                </tbody>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                </tbody>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360&euro;</td>
+                    </tr>
+                </tfoot>
+            </table>
+            <hr>
+        </div>
     </main>
 
 </body>
