--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
             </table>
             <hr>
         </div>
+        <div>
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &#x2717;</li>
+                <li>Visitare greenwich &#x2713;</li>
+                <li>Ascoltare un artista di strada a Convent Garden &#x2713;</li>
+                <li>Visitare la Tower of London &#x2717;</li>
+            </ul>
+            <hr>
+        </div>
     </main>
 
 </body>
